# jcs

./: numpyte.py
CBmpResize/: CBmpResize  CMakeLists.txt  build.sh  compile_commands.json  main.py  neovim.json  resize.sh
